refactor(arch): 重构项目架构，修复 PyPI 安装后的模块导入问题
- 将所有核心模块移动到 uproxier 包内，统一包结构
- 更新 pyproject.toml 配置，使用 uproxier.cli:cli 作为入口点
- 修复 start_async 和 --daemon 模式的模块运行方式
- 优化错误处理：stdout 输出到 DEVNULL，只捕获 stderr
- 删除复杂的路径查找逻辑，使用简洁的模块运行方式
- 更新版本号到 0.1.7

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "uproxier"
-version = "0.1.5"
+version = "0.1.7"
 description = "HTTP/HTTPS proxy with rules engine and web UI"
 readme = "README_PYPI.md"
 requires-python = ">=3.8"
@@ -37,11 +37,10 @@ dependencies = [
 ]
 
 [project.scripts]
-uproxier = "cli:cli"
+uproxier = "uproxier.cli:cli"
 
 [tool.setuptools]
 packages = ["uproxier", "uproxier.examples", "uproxier.templates"]
-py-modules = ["cli", "proxy_server", "web_interface", "rules_engine", "certificate_manager", "version"]
 
 [tool.setuptools.package-data]
 uproxier = ["templates/*.html", "examples/*.yaml", "examples/*.md"]
