--- a/uproxier/examples/config_examples.yaml
+++ b/uproxier/examples/config_examples.yaml
@@ -4,6 +4,7 @@ capture:
   large_file_threshold: 1048576
   save_binary_content: true
   binary_preview_max_bytes: 10485760
+  enable_https: true  # 启用 HTTPS 解密
   include:
     hosts: [ ]
     paths: [ ]
@@ -13,11 +14,6 @@ capture:
     paths: [ ]
     methods: [ ]
 
-proxy:
-  host: 0.0.0.0
-  port: 8001
-  web_port: 8002
-  enable_https: true
 
 rules:
   # 1) 基础：按 Host 精确匹配，改请求头
