--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "uproxier"
-version = "0.1.13"
+version = "0.1.14"
 description = "HTTP/HTTPS proxy with rules engine and web UI"
 readme = "README_PYPI.md"
 requires-python = ">=3.8"
@@ -40,7 +40,7 @@ dependencies = [
 uproxier = "uproxier.cli:cli"
 
 [tool.setuptools]
-packages = ["uproxier", "uproxier.examples", "uproxier.templates", "uproxier.templates.static", "uproxier.templates.static.css", "uproxier.templates.static.js"]
+packages = ["uproxier", "uproxier.examples", "uproxier.templates", "uproxier.utils", "uproxier.templates.static", "uproxier.templates.static.css", "uproxier.templates.static.js"]
 
 [tool.setuptools.package-data]
 uproxier = ["templates/*.html", "templates/static/css/*.css", "templates/static/js/*.js", "examples/*.yaml", "examples/*.md"]
