--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "uproxier"
-version = "0.1.14"
+version = "0.1.15"
 description = "HTTP/HTTPS proxy with rules engine and web UI"
 readme = "README_PYPI.md"
 requires-python = ">=3.8"
 license = "MIT"
-authors = [{ name = "huangjincheng", email = "your-email@example.com" }]
+authors = [{ name = "huangjincheng", email = "hjc853@gmail.com" }]
 keywords = ["proxy", "mitmproxy", "sse", "rules", "mock", "http", "https"]
 classifiers = [
   "Development Status :: 4 - Beta",
